Implement Organizer Dashboard (BE + FE)
BACKEND:
- New service: DashboardService (3 methods)
  - getOverview(userId, isAdmin): KPI aggregation + recent orders
  - getEventStats(eventId, userId, isAdmin): event revenue, ticket type breakdown
  - getAttendees(eventId, ...): paginated attendee list with search/filter
- New controller: DashboardController (3 endpoints under /v1/organizer/dashboard)
  - GET /overview: overview KPIs + recent orders
  - GET /events/{id}: event stats + ticket type breakdown
  - GET /events/{id}/attendees: attendee list (filter by status, search by name/code)
- New DTOs: DashboardOverviewResponse, EventStatsResponse, AttendeeResponse
- Modified repositories (aggregate queries):
  - EventRepository: countByOrganizerId
  - TicketRepository: countByOrganizerId, countCheckedInByOrganizerId, countByStatus, countByEventIdAndStatus, countByEventId, countCheckedInByEventIdGroupByTicketType, findAttendeesByEventId
  - OrderRepository: findRecentCompletedOrdersByOrganizerId
  - OrderItemRepository: sumRevenueByOrganizerId, sumTotalRevenue, sumRevenueByEventId
- JPQL aggregation: SUM(unitPrice*quantity), COUNT, GROUP BY pushed to DB (Oracle)
- Access control: ORGANIZER (own events) + ADMIN (all events)

FRONTEND:
- New pages:
  - /organizer/dashboard: overview with 4 KPI cards, events list, recent orders table
  - /organizer/dashboard/events/[id]: event stats (revenue, ticket type breakdown with progress bars), attendee list (paginated, searchable, filterable)
- New types: DashboardOverviewResponse, EventStatsResponse, AttendeeResponse, etc.
- New service: dashboard-service.ts (3 methods: getOverview, getEventStats, getAttendees)
- Updated Header: added Dashboard link for ORGANIZER/ADMIN
- Vietnamese UI labels throughout

TESTING:
- Backend compiles OK (./gradlew compileJava)
- Frontend builds OK (npm run build)
- BE endpoints ready for testing
- Test flow: Login ORGANIZER → Dashboard → View KPIs, events, orders → Click event → View stats + attendees

